<resources>
    // mapbox
    <string name="mapbox_access_token">pk.eyJ1IjoiZGlpc2NvdmVyeSIsImEiOiJja3BtOTB2MjMwZGFtMndtdXRsOXl3eGY0In0.RdDGzJMFLrbmbMNCVOryRw</string>

    <string name="app_name">DIISCOVERY</string>
    <string name="motto">Discover, Explore, Observe</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">New? Register here</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="welcome_message">Welcome!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>


    <string name="register">REGISTER</string>
    <string name="remember_me">Remember Me</string>

    <string name="login_here">Already have an account? Login here.</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>

    <string name="settings">Settings</string>

    <string name="update_info">Update</string>
    <string name="sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_map_key">AIzaSyAIvXlIHvFNJLmWYaHXidWLmnYh6Bozzc4</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
</resources>