<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login_Activity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:cardBackgroundColor="#5EB1B1B1"
                app:cardElevation="2dp">

                <!-- Banner of app name: DIISCOVERY -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:fontFamily="serif"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <!-- Motto -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="serif"
                android:text="@string/motto"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_credentials"
        android:layout_below="@+id/cv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- email address -->
        <EditText
            android:id="@+id/editText_EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorLink="#3278FF" />

        <!-- password -->
        <EditText
            android:id="@+id/editText_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorLink="#3278FF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center"
        android:layout_gravity="center">

        <!-- remember me -->
        <CheckBox
            android:id="@+id/checkBox_RememberMe"
            android:layout_width="214dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:buttonTint="#3278FF"
            android:checked="false"
            android:text="@string/remember_me"
            android:textSize="15sp" />

        <!-- forgot password -->
        <TextView
            android:id="@+id/TextView_ForgotPassword"
            android:layout_width="137dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:text="@string/forgot_password"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_credentials"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <!-- login button -->
        <Button
            android:id="@+id/btn_Login"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="#3278FF"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="#FFFFFF" />

        <!-- register here -->
        <TextView
            android:id="@+id/RegisterHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:text="@string/register_here"
            android:textColor="#000000"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:backgroundTint="#3278FF"
            android:padding="10dp"
            android:layout_margin="10dp"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>