<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPassword_Activity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:cardBackgroundColor="#5EB1B1B1"
                app:cardElevation="2dp">

                <!-- Banner of app name: DIISCOVERY -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:fontFamily="serif"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <!-- welcome -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:fontFamily="serif"
                android:text="@string/reset_password"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cv_title"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- email address -->
        <EditText
            android:id="@+id/editText_ResetEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorLink="#3278FF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_credentials"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <!-- reset password button -->
        <Button
            android:id="@+id/btn_ResetPassword"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="#3278FF"
            android:text="@string/reset_password"
            android:textSize="20sp"
            android:textColor="#FFFFFF" />

        <!-- back to login here -->
        <TextView
            android:id="@+id/btn_BackToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:text="@string/back_to_login"
            android:textColor="#000000"
            android:textSize="15sp" />

        <!-- progress -->
        <ProgressBar
            android:id="@+id/progressBar_Reset"
            android:backgroundTint="#3278FF"
            android:padding="10dp"
            android:layout_margin="10dp"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </LinearLayout>


</RelativeLayout>